[tool.poetry]
name = "concurrence_and_parallelism"
version = "0.1.0"
description = ""
authors = ["Jose Manuel Acevo Garcia <83979173+JoseMacevo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
